--- a/Styles.css
+++ b/Styles.css
@@ -1,8 +1,10 @@
+@import "https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;700&display=swap";
+
 *{ margin:0;
     padding:0;
     border:0;
  }
- body {
+    body {
     background:#282a36;
     color:white;
     font-family: 'Source Sans Pro', sans-serif;
@@ -25,6 +27,43 @@
     }
     /* transition um atraso na exibição de cor*/
      header div a:hover {
-     color:#50fa7b;
+     color:#6567dd;
      transition:700ms;
+     }
+
+     body div p a {
+        color: rgba(202, 196, 196, 0.836);
+        font-size:18px;
+        padding:4px; /* distancia entre o texto e o link*/
+        text-decoration: none;
+        }
+
+     body div p a:hover {
+         color : #6567dd;
+         transition: 700ms;
+     }
+
+     #Perfil {
+        text-align: center;
+        padding: 32px;
+     }
+         /*Arredondamento da imagem*/
+     #Perfil img {
+        border-radius: 50%;
+        border: 5px solid #6567dd;
+        margin-bottom: 32px;
+     }
+
+     #Perfil h1{
+        font-size: 42px;
+        line-height: 52px; /* espaçamento entre as linhas do texto*/
+        font-weight: bold;
+     }
+
+     #Perfil h2{
+        font-size:24px ;
+        line-height: 34px;
+        font-weight: normal;
+        margin-top: 8px;
+        opacity: 0.8;
      }
